--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,18 @@
-app = "" # Change this to your app name
-primary_region = "ord"
+# fly.toml app configuration file generated for mentels-ollama on 2024-07-08T16:57:47+02:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'mentels-ollama'
+primary_region = 'ams'
 
 [build]
-  image = "ollama/ollama:latest"
+  image = 'ollama/ollama:latest'
 
 [[mounts]]
-  source = "ollama"
-  destination = "/root/.ollama"
-  initial_size = "10gb"
+  source = 'ollama'
+  destination = '/root/.ollama'
+  initial_size = '10gb'
 
 [http_service]
   internal_port = 11434
@@ -15,14 +20,12 @@ primary_region = "ord"
   auto_start_machines = true
   min_machines_running = 0
 
-[[http_service.checks]]
-  grace_period = "10s"
-  interval = "30s"
-  method = "GET"
-  timeout = "5s"
-  path = "/"
+  [[http_service.checks]]
+    interval = '30s'
+    timeout = '5s'
+    grace_period = '10s'
+    method = 'GET'
+    path = '/'
 
 [[vm]]
-  size = "performance-8x"
-  memory = "16gb"
-  gpu_kind = "l40s"
+  size = 'a100-80gb'
